# fixed-point

./: .clang-format  .gitignore  .gitmodules  .prettierrc  CMakeLists.txt  LICENSE  README.md  build.sh  requirements.txt
docs/: building.md  ieee-754-bits.md  ieee-754-half.md  ieee-notes.md  precision.md
examples/: extract_exponent_bias.cpp  extract_ieee_754.cpp  extract_sign_bit.cpp  fixed_arithmetic.cpp  float_to_fixed.cpp  google_bfloat.cpp  maratyszcza.cpp  simple_half.c  simple_half.cpp  simple_ieee_754.c  simple_ieee_754.cpp
examples/fixed-point/: CMakeLists.txt  fixed_arithmetic.cpp  float_to_fixed.cpp
examples/floating-point/: CMakeLists.txt  extract_exponent_bias.cpp  extract_ieee_754.cpp  extract_sign_bit.cpp  google_bfloat.cpp  ieee_754_32bit.cpp  maratyszcza.cpp  simple_half.cpp  simple_ieee_754.cpp
examples/quantization/: CMakeLists.txt  simple_quant.cpp
include/: fixed.h  fixed_point.h  floating_point.h  precision.h  quant.h  quantization.h
src/: floating_point.c  precision.c  quant.c  quantization.c
view/: bin.py  bits.py  table.py
